--- a/Unit 3/lesson13/recipe_app/package.json
+++ b/Unit 3/lesson13/recipe_app/package.json
@@ -5,7 +5,7 @@
   "main": "main.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node main.js"
+    "start": "nodemon main.js"
   },
   "author": "Bhabha September",
   "license": "ISC",
@@ -15,5 +15,8 @@
     "express-ejs-layouts": "^2.5.0",
     "http-status-codes": "^1.3.0",
     "mongodb": "^3.6.3"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
