--- a/Unit 3/lesson14/recipe_app/package.json
+++ b/Unit 3/lesson14/recipe_app/package.json
@@ -16,5 +16,8 @@
     "http-status-codes": "^1.3.0",
     "mongodb": "^3.6.3",
     "mongoose": "^8.6.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
